tests/ui/type-alias-impl-trait/issue-90400-2.stderr
error[E0277]: the trait `Baz` is not implemented for `MyBaz<B>`
  --> $DIR/issue-90400-2.rs:25:9
   |
LL |         MyBaz(bar)
   |         ^^^^^^^^^^ the trait `Baz` is not implemented for `MyBaz<B>`, which is required by `MyBaz<B>: Baz`
   |
note: required for `MyBaz<B>` to implement `Baz`
  --> $DIR/issue-90400-2.rs:30:14
   |
LL | impl<B: Bar> Baz for MyBaz<B> {
   |         ---  ^^^     ^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     type FooFn<B> = impl Baz MyBaz<B>: Baz;
   |                              +++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
